--- a/todo/public/assets/css/style.css
+++ b/todo/public/assets/css/style.css
@@ -1,5 +1,5 @@
 :root {
-  --background-light: #f0f2fa;
+  --background-light: #ddd6fe;
   --background-white: #f6f5ff;
   --text-dark: #0a0040;
   --color-primary: #6143ff;
@@ -94,7 +94,6 @@ hr.linha_header {
 }
 .task_list {
   display: flex;
-  background-color: teal;
   flex-direction: column;
   margin-top: 1.25rem;
   width: 100%;
@@ -103,21 +102,35 @@ hr.linha_header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 1.75rem 1rem;
+  border-bottom: 1px solid var(--background-light);
+}
+.task:hover {
+  background-color: var(--background-light);
 }
 .title {
   display: flex;
   align-items: center;
-  background-color: green;
   flex: 1;
 }
 .priority,
 .actions {
+  display: flex;
+  align-items: center;
   flex: 1;
 }
 
 .actions {
   display: flex;
   justify-content: flex-end;
+}
+
+.sphere {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  margin-right: 0.75rem;
+  background-color: red;
 }
 
 .task_title {
