#24: Incluindo Imagens e Ícones no Template

--- a/todo/public/assets/css/style.css
+++ b/todo/public/assets/css/style.css
@@ -18,18 +18,26 @@ body {
   height: 100vh;
   background-color: var(--background-white);
 }
+
 .container {
   width: inherit;
   height: inherit;
   display: flex;
 }
+
 .sidebar {
   width: 100px;
   background-color: var(--color-primary);
 }
+
+.sidebar img {
+  max-width: 100%;
+}
+
 .container {
   width: inherit;
 }
+
 nav {
   height: 100px;
   background-color: var(--background-light);
@@ -39,65 +47,81 @@ nav {
   justify-content: flex-end;
   padding-right: 20px;
 }
+
 a.btn {
   text-decoration: none;
 }
+
 .btn {
   padding: 20px 30px;
   border-radius: 0.75rem;
 }
+
 .btn-primary {
   background-color: var(--color-primary);
   color: white;
 }
+
 main {
   display: flex;
   padding: 1.25rem;
 }
+
 section.graph {
   display: flex;
   flex-direction: column;
   padding: 5px;
   width: 33%;
 }
+
 .graph_header {
   display: flex;
   align-items: center;
   gap: 0.5rem;
 }
+
 hr.linha_header {
   width: 6.25rem;
   display: inline-block;
 }
+
 .graph_subtitle {
   margin-top: 0.75rem;
 }
+
 .graph-placeholder {
-  background-color: #ccc;
+  background: url("/assets/images/graph.png");
+  background-size: contain;
   width: 18.75rem;
   height: 18.75rem;
   margin-top: 20px;
   margin-left: 48px;
 }
+
 .graph_header--tasks_left {
   text-align: center;
   margin-top: 10px;
 }
+
 .list {
   flex: 1;
   padding: 0.25rem 1rem;
 }
+
 .list_header {
   display: flex;
 }
+
 .list_header-select {
 }
+
 .task_list {
   display: flex;
   flex-direction: column;
   margin-top: 1.25rem;
   width: 100%;
 }
+
 .task {
   display: flex;
   align-items: center;
@@ -105,14 +129,17 @@ hr.linha_header {
   padding: 1.75rem 1rem;
   border-bottom: 1px solid var(--background-light);
 }
+
 .task:hover {
   background-color: var(--background-light);
 }
+
 .title {
   display: flex;
   align-items: center;
   flex: 1;
 }
+
 .priority,
 .actions {
   display: flex;
@@ -122,6 +149,7 @@ hr.linha_header {
 
 .actions {
   display: flex;
+  gap: 1.25rem;
   justify-content: flex-end;
 }
 
