--- a/todo/public/assets/css/style.css
+++ b/todo/public/assets/css/style.css
@@ -77,14 +77,22 @@ section.graph {
 .graph_header {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: 2rem;
+}
+
+.graph_header h2 {
+  font-size: 1rem;
 }
 
 .graph_header-line {
-  width: 6rem;
+  width: 120px;
   height: 0.125rem;
   background-color: #000;
   opacity: 20%;
+}
+
+.graph_header-date {
+
 }
 
 .graph_subtitle {
