--- a/todo/public/assets/css/style.css
+++ b/todo/public/assets/css/style.css
@@ -55,6 +55,11 @@ a.btn {
 .btn {
   padding: 20px 30px;
   border-radius: 0.75rem;
+  transition:  all .3s ease-in-out;
+}
+
+.btn:hover {
+ transform: scale(1.05);
 }
 
 .btn-primary {
@@ -141,10 +146,13 @@ section.graph {
   justify-content: space-between;
   padding: 1.75rem 1rem;
   border-bottom: 1px solid var(--background-light);
+  transition: all .3s ease-in-out;
 }
 
 .task:hover {
   background-color: var(--background-light);
+  border-radius: .75rem;
+  transform: scale(1.01);
 }
 
 .title {
@@ -164,6 +172,11 @@ section.graph {
   display: flex;
   gap: 1.25rem;
   justify-content: flex-end;
+  transition: all .3s ease-in-out;
+}
+
+.actions>a:hover{
+  transform: scale(1.2);
 }
 
 .sphere {
