--- a/todo/public/assets/css/style.css
+++ b/todo/public/assets/css/style.css
@@ -144,6 +144,7 @@ section.graph {
 .task_list {
   display: flex;
   flex-direction: column;
+  gap: 0.5rem;
   margin-top: 1.25rem;
   width: 100%;
 }
