--- a/todo/public/assets/css/style.css
+++ b/todo/public/assets/css/style.css
@@ -205,12 +205,12 @@ section.graph {
   font-weight: bold;
 }
 
-#create_task_section {
+#task_section {
   margin: auto;
   padding-top: 1.25rem;
 }
 
-#create_task_section > h1 {
+#task_section > h1 {
   text-align: center;
   margin-bottom: 1.25rem;
 }
